[tool.poetry]
name = "learning-dqn"
version = "0.1.0"
description = ""
authors = ["hikaruri <hikahikahikaru33@gmail.com>"]
readme = "README.md"
packages = [{include = "learning_dqn"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.12.6"
torch = "^1.13.1"
gymnasium = "^0.29.1"


[tool.poetry.dev-dependencies]
matplotlib = "^3.5.3"
jupyter = "^1.0.0"
black = "^20.8b1"
isort = "^5.8.0"
ipykernel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
